# scheduler-tools

./: .gitignore  Pipfile  README.md  analyze.py  check_courses.py  cs.py  requirements.txt  setup.cfg  test_ubc.py  ubc.py  update_firebase.py  util.py
lamda/: README.md  course.py  lambda_handler.py  schedulecreator.py  test_course.py  test_schedulecreator.py  update_function_aws.sh
