[metadata]
name = scheduler-tools
author-email = nickwu241@gmail.com
summary = Python Tooling for Scheduler
description-file = README.md
description-content-type = text/x-markdown; charset=UTF-8
home-page = https://github.com/nickwu241/CourseScrapperUBC

[pycodestyle]
exclude = .git,__pycache__,build,dist
